--- a/1.SimpleMVT/djangomvt/templates/layout.html
+++ b/1.SimpleMVT/djangomvt/templates/layout.html
@@ -30,6 +30,12 @@
                     </li>
                 </ul>
 
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'users:register' %}">Реєстрація</a>
+                    </li>
+                </ul>
+
             </div>
         </div>
     </nav>
