Working is good add Product

--- a/1.SimpleMVT/djangomvt/templates/layout.html
+++ b/1.SimpleMVT/djangomvt/templates/layout.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/categories">Категорії</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/products">Продукти</a>
+                    </li>
                 </ul>
 
                 <ul class="navbar-nav">
